# hermes

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: tests.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/hermes/: __init__.py  agent.py  app.py  db.py  dependencies.py  fields.py  handlers.py  logger.py  models.py  schemas.py  settings.py  urls.py  views.py
backend/hermes/views/: chatbot.py  products.py
backend/migrations/: env.py
backend/migrations/versions/: 3bee130ded30_init.py  c2773b7755ce_product_created_at_and_updated_at.py
backend/tests/: test_app.py
frontend/: Dockerfile
frontend/hermes/: index.html  package-lock.json  package.json
frontend/hermes/src/: App.jsx  index.css
frontend/hermes/src/api/: chatbotApi.jsx
frontend/hermes/src/components/: BestsellerSection.jsx  Product.jsx  SaleSection.jsx
frontend/hermes/src/components/Chatbot/: Chatbot.jsx  InputBox.jsx  Message.jsx  Question.jsx
frontend/hermes/src/components/Header/: Header.jsx  LinkWithIcon.jsx  Logo.jsx  Menu.jsx  Search.jsx
frontend/hermes/src/helpers/: text.jsx
frontend/hermes/src/hooks/: useChatbot.jsx
frontend/hermes/src/layout/: Layout.jsx
frontend/hermes/src/pages/: HomePage.jsx
frontend/hermes/src/router/: router.jsx  routes.jsx
hermes/: asgi.py
tests/: test_app.py
