[tool.poetry]
name = "hermes"
version = "0.1.0"
description = ""
authors = ["Mateusz Gierczak <matgie9778@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
esmerald = "^3.4.1"
uvicorn = "^0.30.6"
uvloop = "^0.20.0"
websockets = "^15.0.1"
pydantic-ai = "^0.2.18"
edgy = {version = "^0.32.1", extras = ["postgres"]}
numpy = "2.2.6"
pgvector = "^0.4.1"
mypy = "^1.16.1"

[tool.poetry.group.dev.dependencies]
ruff = "==0.1.13"
bandit = "^1.7.8"
ipython = "^8.4.0"
greenlet = "^3.0.3"
watchfiles = "^0.21.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.21.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.12.0"
pytest-sugar = "^0.9.7"
pytest-repeat = "^0.9.3"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
watchdog = ">=2.0,<4.0"
mkdocs-material = "^9.5.9"
mkdocs-autorefs = "^0.5.0"
mkdocs-gen-files = "^0.5.0"
mkdocstrings = { extras = ["python"], version = "^0.24.0" }


[tool.pytest.ini_options]
addopts = "--cov=./hermes"
testpaths = ["./tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
namespace_packages = true
ignore_missing_imports = true
no_site_packages = true

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.bandit]
skips = ['B101']

[tool.ruff]
target-version = "py312"

line-length = 88
indent-width = 4

[tool.ruff.lint]
extend-safe-fixes = ["TID252"]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "UP", # pyupgrade
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
ignore = [
    "B008", # do not perform function calls in argument defaults
    "E501", # line too long
    "SIM115", # use context handler for opening files
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"
line-ending = "auto"

[tool.ruff.mccabe]
max-complexity = 8 # increase up to 10 if needed

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
